// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Bow> Snapshots With \`midnight-green\` variant 1`] = `
<div
  className="ys-bow ys-bow--midnight-green"
/>
`;

exports[`<Bow> Snapshots With custom \`className\` 1`] = `
<div
  className="ys-bow donkey"
/>
`;
